@@ -401,7 +401,7 @@ dnl WX_INTERFACE_AGE = 0
 
 WX_MAJOR_VERSION_NUMBER=2
 WX_MINOR_VERSION_NUMBER=1
-WX_RELEASE_NUMBER=11
+WX_RELEASE_NUMBER=12
 
 WX_INTERFACE_AGE=0
 WX_BINARY_AGE=0
